GNOME Bugzilla – Bug 697851
gnome-settings-daemon 3.8.0 crash on volume change notification
Last modified: 2013-04-12 11:39:30 UTC
Hello, when pressing volume up or volume down key, gnome-settings-daemon segfaults. Backtrace is Core was generated by `/usr/libexec/gnome-settings-daemon'. Program terminated with signal 11, Segmentation fault.
+ Trace 231770
The error comes from "port" variable which is null: (gdb) p port $1 = (const GvcMixerStreamPort *) 0x0 in static void update_dialog, port is not checked: port = gvc_mixer_stream_get_port (stream); if (g_strcmp0 (gvc_mixer_stream_get_form_factor (stream), "internal") != 0 || g_strcmp0 (port->port, "analog-output-speaker") != 0) {
It is valid for for a stream not to have a port, but unusual. It could happen with network sinks, e g.
Created attachment 241342 [details] [review] media-keys: Fix crash when changing the volume For certain streams, we will have no port assigned, so don't crash accessing the port's name.
Attachment 241342 [details] pushed as 45fd511 - media-keys: Fix crash when changing the volume
Fixed in gnome-3-8 and master