media-keys: Fix crash when changing the volume

For certain streams, we will have no port assigned, so don't
crash accessing the port's name.

https://bugzilla.gnome.org/show_bug.cgi?id=697851